# ytdl-mini

./: .gitignore  Cargo.toml
src/: main.rs
src/core/: app_state.rs  download_manager.rs  mod.rs  settings.rs  ytdlp.rs
src/ui/: app.rs  components.rs  mod.rs
src/utils/: file_utils.rs  mod.rs  url_validator.rs
